k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoaim-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: whoaim.deploy-at.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoaim-web-service
            port:
              number: 80
